fixed some styling on mobile portrait and landscape

--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -35,9 +35,14 @@
     width: 100%;
   }
 
+  h1 {
+    font-size: 1.75em;
+  }
+
   .landing__SearchBox {
-    height: 35%;
+    height: 50%;
     padding: 1rem;
+    justify-content: center;
   }
 
   .landing__SearchBox-Start,
@@ -66,6 +71,23 @@
 
   .final__Container .trip {
     width: 100%;
+  }
+
+  .places__ListContainer {
+    width: 100%;
+  }
+
+  .places__ListItem {
+    height: 20%;
+  }
+
+  .landing__SearchBox-Value {
+    outline: none;
+    border-radius: 0px;
+  }
+
+  .landing__Search-Bottom {
+    height: 20%;
   }
 
 }
